# GB2011-Atrial-myocyte-action-potential-model

./: Makefile.am  Makefile.in  README
check_test/: in
src/: GBd.c  currents.c  data_out.c  exptable.c  input_para.c  mem.c  syspara.h  system.c  val_constants.c
